# Author: Dominik Harmim <xharmi00@stud.fit.vutbr.cz>

CMAKE_MINIMUM_REQUIRED(VERSION 3.9)

SET(CMAKE_C_COMPILER gcc)
SET(CMAKE_C_FLAGS "-Wall -std=c99 -pedantic -g")

IF(${PROJECT})
	PROJECT(${PROJECT})
ELSE()
#	PROJECT(C202)
	PROJECT(C204)
#	PROJECT(C206)
ENDIF()

IF(${PROJECT_NAME} STREQUAL C202)

	SET(SOURCE_FILES c202/c202-test.c c202/c202.c c202/c202.h)

ELSEIF(${PROJECT_NAME} STREQUAL C204)

	INCLUDE_DIRECTORIES(c202)
	SET(SOURCE_FILES c204/c204-test.c c204/c204.c c204/c204.h c202/c202.c c202/c202.h)

ELSEIF(${PROJECT_NAME} STREQUAL C206)

	SET(SOURCE_FILES c206/c206-test.c c206/c206.c c206/c206.h)

ENDIF()

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES})
